[update] msbuild.yml
vcpkg更新するように

--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -69,21 +69,23 @@ jobs:
       working-directory: ${{env.GITHUB_WORKSPACE}}
       run: nuget restore ${{env.SOLUTION_FILE_PATH}}
     
-    # - name: Install vcpkg
-    #   run:
-    #     mkdir ${{ env.VCPKG_INSTALL_PATH }} &&
-    #     cd ${{ env.VCPKG_INSTALL_PATH }} &&
-    #     git clone https://github.com/microsoft/vcpkg . &&
-    #     bootstrap-vcpkg.bat
+    - name: Install vcpkg
+      run:
+        mkdir ${{ env.VCPKG_INSTALL_PATH }} &&
+        cd ${{ env.VCPKG_INSTALL_PATH }} &&
+        git clone https://github.com/microsoft/vcpkg . &&
+        bootstrap-vcpkg.bat
+
+    - name: Check vcpkg
+      run: dir "${{ env.VCPKG_INSTALL_PATH }}"
 
     - name: vcpkg integrate
-      #working-directory: ${{ env.VCPKG_INSTALL_PATH }}
-      run: vcpkg integrate install && vcpkg update
+      run: cd "${{ env.VCPKG_INSTALL_PATH }}" && vcpkg.exe integrate install
 
     - name: Restore vcpkg caches
       uses: actions/cache@v3.2.3
       with:
-        path: ${{env.SOLUTION_FILE_PATH}}/vcpkg_installed
+        path: ${{ env.SOLUTION_FILE_PATH }}/vcpkg_installed
         key: vcpkg-${{hashFiles('./vcpkg.json')}}
         restore-keys: |
           vcpkg-${{hashFiles('./vcpkg.json')}}
