--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -29,3 +29,18 @@ template: |
   ## Changes
 
   $CHANGES
+  
+autolabeler:
+  - label: 'chore'
+    files:
+      - '*.md'
+    branch:
+      - '/docs{0,1}\/.+/'
+  - label: 'bug'
+    branch:
+      - '/fix\/.+/'
+    title:
+      - '/fix/i'
+  - label: 'enhancement'
+    branch:
+      - '/feature\/.+/'
