--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -84,7 +84,7 @@ jobs:
     - name: Restore vcpkg caches
       uses: actions/cache@v3.2.3
       with:
-        path: $HOME\AppData\Local\vcpkg\archives
+        path: ${{ github.home }}\AppData\Local\vcpkg\archives
         key: vcpkg-${{hashFiles('./vcpkg.json')}}
         restore-keys: |
           vcpkg-${{hashFiles('./vcpkg.json')}}
