[update] スクロールバーを検出するクラス追加
スクロールバーを検出するクラス追加

--- a/UmaUmaChecker/UmaUmaChecker.vcxproj
+++ b/UmaUmaChecker/UmaUmaChecker.vcxproj
@@ -236,6 +236,7 @@
     <ClCompile Include="GrandLiveMusicListFrame.cpp" />
     <ClCompile Include="Log.cpp" />
     <ClCompile Include="ScenarioData.cpp" />
+    <ClCompile Include="ScrollbarDetector.cpp" />
     <ClCompile Include="Tesseract.cpp" />
     <ClCompile Include="ThemeWrapper.cpp" />
     <ClCompile Include="Theme\BaseRenderer.cpp" />
@@ -271,6 +272,7 @@
     <ClInclude Include="Log.h" />
     <ClInclude Include="object_pool.hpp" />
     <ClInclude Include="ScenarioData.h" />
+    <ClInclude Include="ScrollbarDetector.h" />
     <ClInclude Include="Tesseract.h" />
     <ClInclude Include="ThemeWrapper.h" />
     <ClInclude Include="Theme\BaseRenderer.h" />
