--- a/UmaUmaChecker/UmaUmaChecker.vcxproj
+++ b/UmaUmaChecker/UmaUmaChecker.vcxproj
@@ -231,6 +231,7 @@
     <ClCompile Include="AboutDialog.cpp" />
     <ClCompile Include="CheckUpdateDialog.cpp" />
     <ClCompile Include="CombineImage.cpp" />
+    <ClCompile Include="DebugImageCombineFrame.cpp" />
     <ClCompile Include="EventData.cpp" />
     <ClCompile Include="FontComboBox.cpp" />
     <ClCompile Include="GrandLiveMusicListFrame.cpp" />
@@ -266,6 +267,7 @@
     <ClInclude Include="CaptureMode.h" />
     <ClInclude Include="CheckUpdateDialog.h" />
     <ClInclude Include="CombineImage.h" />
+    <ClInclude Include="DebugImageCombineFrame.h" />
     <ClInclude Include="EventData.h" />
     <ClInclude Include="FontComboBox.h" />
     <ClInclude Include="GrandLiveMusicListFrame.h" />
